--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
   
   <div class="header-container">
     <div class="welcome-header">
-      <h2>Welcome to image.io 📷</h2>
+      <h2>Welcome to yuss.cc 📷</h2>
     </div>
   
     <div class="input-row">
